--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,27 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=99
+#spring.datasource.url=jdbc:mysql://localhost:3306/solvewithdev
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+server.port=999
+
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.dbs.hack2hire.controller=INFO
+
+# output to a file
+logging.file.name=solvewithdev.log
+
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+# root level
+logging.level.=INFO
